# online_market

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt  run.sh
online_market/: settings.py  urls.py
web/: admin.py  models.py  urls.py  views.py
web/migrations/: 0001_initial.py
web/templates/: base.html  cancel.html  item.html  main.html  success.html
