[tool.poetry]
name = "online_market"
version = "0.1.0"
description = ""
authors = ["vkdevk <kostya.kobylin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
psycopg2-binary = "^2.9.5"
python-dotenv = "^0.21.0"
stripe = "^5.0.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
